# fpy

./: .gitignore
fpy/: pyproject.toml
fpy/src/fpy/: option.py
fpy/tests/: test_option.py
