[project]
name = "fpy"
version = "0.1.0"
description = ""
authors = [
    {name = "JVitoroliv3ira",email = "jvitoroliveira0711@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "fpy", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
hypothesis = "^6.138.13"
mypy = "^1.17.1"
ruff = "^0.12.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-q --cov=src/fpy --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]

